Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
C13DRVAPI ERRVAL __stdcall C13_CommDataWrsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDataWrW(USHORT value,ULONG addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommDisable(USHORT command,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommEnable(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommErrRdsW(LPUSHORT errbuf,USHORT errbufcount,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommErrWrsW(LPUSHORT errbuf,USHORT errbufcount,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommGlobRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommGlobWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommInfoRdsW(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommProgRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommProgWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT progptr,USHORT progcount,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommStart(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_CommStop(HCARD handleval);
C13DRVAPI VOID __stdcall C13_DARClear(USHORT maskval,USHORT addrval,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_DARGet(USHORT maskval,USHORT addrval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DARRdL(USHORT addrval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_DARRdW(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_DARSet(USHORT maskval,USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_DARWrL(ULONG value,USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_DARWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescAddr(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescAlloc(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DescConfig(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_DescOptRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_DescOptWr(USHORT descopt,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_DescPtrRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescPtrWr(MSGADDR msgaddr,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescWr(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_Div(ULONG diva,ULONG divb);
C13DRVAPI INT __stdcall C13_DllUsageCount(VOID);
C13DRVAPI ERRVAL __stdcall C13_DspBioClear(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_DspBioRd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspBioSet(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspIntfClear(USHORT intmask,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_DspIntfRd(USHORT intmask,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspIntmClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspIntmSet(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspXfClear(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_DspXfRd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspXfSet(HCARD handleval);
C13DRVAPI LPCSTR __stdcall C13_ErrDesc(INT errval);
C13DRVAPI LPCSTR __stdcall C13_ErrDescStr(INT errval);
C13DRVAPI LPCSTR __stdcall C13_ErrName(INT errval);
C13DRVAPI BOOL __stdcall C13_ErrorIsTaggedBC(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ErrorIsTaggedRT(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ErrorResponse(USHORT responseval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ErrorSync(BOOL value,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ErrorTimeout(USHORT timeoutval,HCARD handleval);