Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32NET.CS

        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommDataWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommDataWrsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommDataWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommDataWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommDisable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommDisable(UInt16 command, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommEnable(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommErrRdsW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommErrRdsW(ref UInt16 errbuf, UInt16 errbufcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommErrWrsW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommErrWrsW(ref UInt16 errbuf, UInt16 errbufcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommGlobRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommGlobRdW(ref UInt16 valueptr, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommGlobWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommGlobWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommInfoRdsW@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommInfoRdsW(ref UInt16 bufmodel, UInt16 bufmodelcount, ref UInt16 buffeature, UInt16 buffeaturecount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommProgRdW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommProgRdW(ref UInt16 valueptr, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommProgWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommProgWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommRun@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommRun(ref UInt16 dataptr, UInt16 datacount, ref UInt16 progptr, UInt16 progcount, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommStart@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommStart(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_CommStop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_CommStop(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DARClear@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_DARClear(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DARGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DARGet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DARRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_DARRdL(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DARRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_DARRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DARSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_DARSet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DARWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_DARWrL(UInt32 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DARWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_DARWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescAddr@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_DescAddr(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescAlloc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_DescAlloc(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescConfig@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DescConfig(UInt32 configval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescOptRd@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C13_DescOptRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescOptWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_DescOptWr(UInt16 descopt, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescPtrRd@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_DescPtrRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescPtrWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_DescPtrWr(UInt32 msgaddr, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescRd@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_DescRd(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, ref UInt16 desc, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DescWr@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_DescWr(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, ref UInt16 desc, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_Div@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 C13_Div(UInt32 diva, UInt32 divb);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DllUsageCount@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DllUsageCount();
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspBioClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspBioClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspBioRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspBioRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspBioSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspBioSet(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspIntfClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspIntfClear(UInt16 intmask, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspIntfRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspIntfRd(UInt16 intmask, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspIntmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspIntmClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspIntmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspIntmSet(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspXfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspXfClear(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspXfRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspXfRd(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_DspXfSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_DspXfSet(UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrDesc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_ErrDesc(Int32 errval);
        public static string C13_ErrDesc(Int32 errval) { return Marshal.PtrToStringAnsi(_C13_ErrDesc(errval)); }
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrDescStr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_ErrDescStr(Int32 errval);
        public static string C13_ErrDescStr(Int32 errval) { return Marshal.PtrToStringAnsi(_C13_ErrDescStr(errval)); }
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrName@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern IntPtr _C13_ErrName(Int32 errval);
        public static string C13_ErrName(Int32 errval) { return Marshal.PtrToStringAnsi(_C13_ErrName(errval)); }
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorIsTaggedBC@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorIsTaggedBC(UInt32 msgaddr, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorIsTaggedRT@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorIsTaggedRT(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorResponse@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorResponse(UInt16 responseval, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorSync@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C13_ErrorSync(Int32 value, UInt32 handleval);
        [DllImport("C13W32.DLL", EntryPoint = "_C13_ErrorTimeout@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 C13_ErrorTimeout(UInt16 timeoutval, UInt32 handleval);
